--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <header>
 <h1>Welcome to SUSAN MOFYA 2021456030 Website</h1>
+<h2>Group Partner MATHIAS PARADZA 2021403386</h2>
 <nav>
 <a href="#">Home</a> |
 <a href="#">About</a> |
